--- a/src/composer.json
+++ b/src/composer.json
@@ -1,5 +1,5 @@
-{
-    "autoload":{
-        "psr-4":{"VendMachine\\" : "../src/"}
+{   
+    "require": {
+        "phpunit/phpunit": "^9.5"
     }
 }
