--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -1,14 +1,7 @@
-FROM php:8.0-fpm
-
+FROM php:fpm-alpine
+RUN apk --update --no-cache add git \    
+    && docker-php-ext-install mysqli pdo_mysql
 COPY --from=composer /usr/bin/composer /usr/bin/composer
 WORKDIR /var/www
-
-RUN apt-get update; \
-    apt-get upgrade -y; \    
-    # Install the PHP pdo_mysql extention
-    docker-php-ext-install pdo_mysql;     
-
-CMD composer install; php-fpm;
-
-EXPOSE 9000 
-
+CMD php-fpm; composer install;  
+EXPOSE 9000
